// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignVarFromResponseBody should add postman collection var with name and response body value 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resDataId = jsonData?.data?.id;
",
  "// pm.collectionVariables - Set leadsAdd.id as variable for jsonData.data.id
if (_resDataId !== undefined) {
   pm.collectionVariables.set(\\"leadsAdd.id\\", jsonData.data.id);
   console.log(\\"- use {{leadsAdd.id}} as collection variable for value\\",jsonData.data.id);
} else {
   console.log('INFO - Unable to assign variable {{leadsAdd.id}}, as jsonData.data.id is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should add postman collection var with name and response body value for array 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _res0Id = jsonData?.[0]?.id;
",
  "// pm.collectionVariables - Set leadsAdd.id as variable for jsonData[0].id
if (_res0Id !== undefined) {
   pm.collectionVariables.set(\\"leadsAdd.id\\", jsonData[0].id);
   console.log(\\"- use {{leadsAdd.id}} as collection variable for value\\",jsonData[0].id);
} else {
   console.log('INFO - Unable to assign variable {{leadsAdd.id}}, as jsonData[0].id is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should not show the log output for a postman collection var with name and response body value 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resDataId = jsonData?.data?.id;
",
  "// pm.collectionVariables - Set leadsAdd.id as variable for jsonData.data.id
if (_resDataId !== undefined) {
   pm.collectionVariables.set(\\"leadsAdd.id\\", jsonData.data.id);
   // console.log(\\"- use {{leadsAdd.id}} as collection variable for value\\",jsonData.data.id);
} else {
   console.log('INFO - Unable to assign variable {{leadsAdd.id}}, as jsonData.data.id is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should show the log output for a postman collection var with name and response body value 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resDataId = jsonData?.data?.id;
",
  "// pm.collectionVariables - Set leadsAdd.id as variable for jsonData.data.id
if (_resDataId !== undefined) {
   pm.collectionVariables.set(\\"leadsAdd.id\\", jsonData.data.id);
   console.log(\\"- use {{leadsAdd.id}} as collection variable for value\\",jsonData.data.id);
} else {
   console.log('INFO - Unable to assign variable {{leadsAdd.id}}, as jsonData.data.id is undefined.');
};
",
]
`;
